etc/dev/resources/gateway/argocd-istio-api/virtual-service-http-echo.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "http-echo"
  namespace: "istio-ingress"
spec:
  hosts:
    - "http-echo.gitops64"
...
