etc/dev/resources/gateway/argocd-istio-api/virtual-service-httpbin.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "httpbin"
  namespace: "istio-ingress"
spec:
  hosts:
    - "httpbin.gitops64"
...
