etc/dev/resources/gateway/argocd-istio-api/virtual-service-k8s-dashboard.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "k8s-dashboard"
  namespace: "istio-ingress"
spec:
  hosts:
    - "k8s-dashboard.gitops64"
...
