etc/dev/resources/gateway/argocd-istio-api/virtual-service-kiali.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "kiali"
  namespace: "istio-ingress"
spec:
  hosts:
    - "kiali.gitops64"
...
